--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,3 +1,14 @@
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics, env
+  endpoint:
+    health:
+      show-details: always
+    env:
+      enabled: true
+      show-values: always
 eureka:
   client:
     serviceUrl:
