--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -9,3 +9,7 @@ management:
     env:
       enabled: true
       show-values: always
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
